Dice roll updates player inventory